--- a/new-project.html
+++ b/new-project.html
@@ -15,7 +15,7 @@
     <nav class="nav-3">
        
         <div>
-            <h3 class="nav-title">Fah<span id="name">a</span>d</h3>
+            <h3 class="nav-title">ism<span id="name">a</span>il</h3>
          </div>
         <div>
             <ul class="nab">
@@ -29,13 +29,13 @@
     <div class="banner">
         <div>
             <h3 class="banner-giti">Hi, I am</h3>
-            <h1 class="banner-text">Fahad Hossain</h1>
+            <h1 class="banner-text">ismail Hossain</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, enim magni ipsa distinctio veritatis voluptate eum maxime expedita sed omnis?</p>
             <button class="button-2">downlord CV</button>
             <button class="button-2">Contect</button>
         </div>
         <div>
-            <img class="profile-pictur" src="all tul/fahad.jpg" alt="no">
+            <img class="profile-pictur" src="all tul/rerdi.png" alt="no">
         </div>
         
 
@@ -52,7 +52,7 @@
             <div class="about-info">
 
                 <h4 class="info-titel">Name:</h4>
-                <p>Fahad</p>
+                <p>ismail</p>
             </div>
 
             <div class="about-info">
